--- a/starter_code/index.html
+++ b/starter_code/index.html
@@ -14,6 +14,8 @@
   <div style="text-align:center; margin: 50px 0px;">
     <button id="start-game-button">START GAME</button>
   </div>
+      <canvas id="canvas" height="800px" width="1200px"></canvas>
+
   <div style="text-align:center;">
     <canvas id="hangman" height="800px" width="1200px"></canvas>
   </div>
